# game-of-life

./: .gitattributes  .gitignore  Cargo.toml  README.md  deploy-dev.bat
.cargo/: config
.github/workflows/: ci.yml  rust.yml
assets/texture/: lifeform_sprite.ron
config/: display.ron  keybindings.ron
saves/: 20x20_blob_tiny.ron  20x20_empty.ron  fixed-point.ron  single_cube.ron  test.ron  test_01.ron  test_02.ron  test_03.ron  test_osc4_period10.ron
src/: main.rs
src/systems/: camera_movement.rs  hud.rs  keyboard.rs  life.rs  menu.rs  menu_credits.rs  menu_paused.rs  mod.rs  saves.rs  sound.rs
