[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Craig Mayhew <craig@mayhew.io>"]
edition = "2021"

[dependencies]
bevy = "0.13.0"
bevy_obj = "0.13" # used to load wavefront .obj files into bevy
rand = "0.8.5"
winit = "0.29" # used to set the window icon as bevy does not support currently
image = "0.24" # also used to set the window icon as bevy does not support currently
ron = "0.8" # used to load/ save games
serde = { version = "1", features = ["derive"] } # used to load/ save games

[profile.dev]
opt-level = 1
codegen-units = 8

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
